--- a/pom.xml
+++ b/pom.xml
@@ -211,11 +211,6 @@
             <version>1.10.0</version>
         </dependency>
         <dependency>
-            <groupId>com.github.lukfor</groupId>
-            <artifactId>magic-progress</artifactId>
-            <version>0.3.2</version>
-        </dependency>
-        <dependency>
             <groupId>org.jetbrains</groupId>
             <artifactId>annotations</artifactId>
             <version>23.1.0</version>
@@ -230,6 +225,17 @@
             <groupId>commons-io</groupId>
             <artifactId>commons-io</artifactId>
             <version>2.11.0</version>
+        </dependency>
+        <!-- https://mvnrepository.com/artifact/com.amazonaws/aws-java-sdk-s3 -->
+        <dependency>
+            <groupId>com.amazonaws</groupId>
+            <artifactId>aws-java-sdk-s3</artifactId>
+            <version>1.12.376</version>
+        </dependency>
+        <dependency>
+            <groupId>me.tongfei</groupId>
+            <artifactId>progressbar</artifactId>
+            <version>0.9.5</version>
         </dependency>
     </dependencies>
 </project>
